Update auto_release with string handling fixes

--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -99,7 +99,9 @@ jobs:
         result-encoding: string
     - name: Display open_pr_list
       run: |
-        echo "open_pr_list : ${{ steps.get_open_pr_list.outputs.result }}"
+        cat <<EOF
+        open_pr_list : ${{ steps.get_open_pr_list.outputs.result }}
+        EOF
 
     - name: Get 'pending_release' PRs
       id: get_release_pending_pr_list
@@ -129,7 +131,9 @@ jobs:
 
     - name: Display release_pending_pr_list
       run: |
-        echo "release_pending_pr_list : ${{ steps.get_release_pending_pr_list.outputs.result }}"
+        cat <<EOF
+        release_pending_pr_list : ${{ steps.get_release_pending_pr_list.outputs.result }}
+        EOF
         echo "is_release_pending : ${{ steps.get_release_pending_pr_list.outputs.is_release_pending }}"
 
     - uses: actions/checkout@v3
@@ -165,7 +169,9 @@ jobs:
     - name: Display job outputs
       run: |
         echo "no_open_prs: ${{ steps.watch_dependabot_prs.outputs.is_complete }}"
-        echo "pending_release_pr_list: ${{ steps.get_release_pending_pr_list.outputs.result }}"
+        cat <<EOF
+        pending_release_pr_list: ${{ steps.get_release_pending_pr_list.outputs.result }}
+        EOF
         echo "is_human_pr: ${{ steps.is_human_pr.outputs.result }}"
         echo "ready_to_release : ${{ steps.set_ready_for_release.outputs.result }}"
 
@@ -193,7 +199,7 @@ jobs:
       id: run_gitversion
       run: |
         pwsh -noprofile -c 'dotnet-gitversion /diag'
-        pwsh -noprofile -c '(dotnet-gitversion | ConvertFrom-Json).psobject.properties | % { echo ("::set-output name={0}::{1}" -f $_.name, $_.value) }'
+        pwsh -noprofile -c '(dotnet-gitversion | ConvertFrom-Json).psobject.properties | % { echo ("{0}={1}" -f $_.name, $_.value) >> $GITHUB_OUTPUT }'
 
     - name: Generate token
       id: generate_token
